* 2013-12-31 - marcus.klein@open-xchange.com

 - Fix for bug 30408: Migrating the level configuration of the root logger, too.

* 2013-12-30 - marcus.klein@open-xchange.com

 - Fix for bug 30015: Dropping attribute 'date completed' when creating the next occurrence of a task.

* 2013-12-24 - thorben.betten@open-xchange.com

 - Fix for bug 30236: Properly check for duplicate folder on folder rename operation

* 2013-12-21 - martin.schneider@open-xchange.com

 - Fix for bug 30250: Publication disclaimer with configurable company name

* 2013-12-21 - thorben.betten@open-xchange.com

 - Fix for bug 30387: Do not cache user data in SessionServletAdapter, but fetch from JCS cache to ensure dealing with most up-to-date instance(s)

* 2013-12-18 - thorben.betten@open-xchange.com

 - Fix for bug 30192: Properly detect a rename operation, rather than performing a move
 - Fix for bug 29307: Immediate (remote) delivery (mail) folder-related changes
 - Fix for bug 30350: Set a non-empty message in dummy Throwable
 - Fix for bug 29892: Ignore "mailto" links in href attribute when resolving <base> tags
 - Fix for bug 30348: Dropped "com.openexchange.session.session" logging property and added "com.openexchange.session.authId" as a separate one

* 2013-12-18 - martin.schneider@open-xchange.com

 - Fix for bug 23492: Removed crawler update and associated CLT

* 2013-12-18 - martin.herfurth@open-xchange.com

 - Fix for bug 30118: Delete single occurrence for appointments lasting longer than one day.

* 2013-12-18 - marcus.klein@open-xchange.com

 - Optimization out of bug 30255: Using now a more specialized locking to throttle only threads trying to load the information from the same
   schema.

* 2013-12-17 - thorben.betten@open-xchange.com

 - Fix for bug 30358: Modified HTTP-API call-back pattern to surround injected string with quotes while injected string gets quote-escaped before
 - Fix for bug 30217: Ensure context identifier is contained in login mappings