@@ -1,3 +1,8 @@
+* 2013-12-31 - thorben.betten@open-xchange.com
+
+ - Change for bug 30425: Add several guards to folder storage API to check for possibly invalid session;
+                         e.g. context-is equal to or less than zero
+
 * 2013-12-31 - marcus.klein@open-xchange.com
 
  - Fix for bug 30408: Migrating the level configuration of the root logger, too.
